oswee/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      imagePullSecrets:
      - name: my-registry-key
      containers:
      - name: hello-webserver
        image: webserver:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: web-server
spec:
  selector:
    app: web-server
  type: NodePort
  ports:
  - name: http
    port: 8080
    nodePort: 31062
